[package]
name = "rumpus_ce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
restson = "1.3.0"
[dependencies.tokio]
version = "1.27.0"
features = ["rt-multi-thread"]
[dependencies.serde]
version = "1.0.160"
features = ["std","derive"]


[profile.dev.package.'*']
opt-level = 3
